--- a/crawlproxies.ipynb
+++ b/crawlproxies.ipynb
@@ -9,33 +9,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['sp.btw2', 'poloman.vn', 'tsla.store', 'coolmate.vn', '5s_official', 'rough.vn', 'patternvn', 'levents.vn', 'guzado.vn', 'thoitrangmando', 'tsimple_official', 'owen.fashion', 'thoitrangbiluxury', 'feaer_store', 'sukiyafashion.vn', '4menstores', 'haidang.fashion', 'thoitrangnam4u', 'thoitrangeverest', 'kojibavn']\n",
-      "['sp.btw2', 'poloman.vn', 'tsla.store', 'coolmate.vn', '5s_official', 'rough.vn', 'patternvn', 'levents.vn', 'guzado.vn', 'thoitrangmando', 'tsimple_official', 'owen.fashion', 'thoitrangbiluxury', 'feaer_store', 'sukiyafashion.vn', '4menstores', 'haidang.fashion', 'thoitrangnam4u', 'thoitrangeverest', 'kojibavn']\n",
-      "['sp.btw2', 'poloman.vn', 'tsla.store', 'coolmate.vn', '5s_official', 'rough.vn', 'patternvn', 'levents.vn', 'guzado.vn', 'thoitrangmando', 'tsimple_official', 'owen.fashion', 'thoitrangbiluxury', 'feaer_store', 'sukiyafashion.vn', '4menstores', 'haidang.fashion', 'thoitrangnam4u', 'thoitrangeverest', 'kojibavn']\n",
-      "['sp.btw2', 'poloman.vn', 'tsla.store', 'coolmate.vn', '5s_official', 'rough.vn', 'patternvn', 'levents.vn', 'guzado.vn', 'thoitrangmando', 'tsimple_official', 'owen.fashion', 'thoitrangbiluxury', 'feaer_store', 'sukiyafashion.vn', '4menstores', 'haidang.fashion', 'thoitrangnam4u', 'thoitrangeverest', 'kojibavn']\n",
-      "['sp.btw2', 'poloman.vn', 'tsla.store', 'coolmate.vn', '5s_official', 'rough.vn', 'patternvn', 'levents.vn', 'guzado.vn', 'thoitrangmando', 'tsimple_official', 'owen.fashion', 'thoitrangbiluxury', 'feaer_store', 'sukiyafashion.vn', '4menstores', 'haidang.fashion', 'thoitrangnam4u', 'thoitrangeverest', 'kojibavn']\n",
-      "['sp.btw2', 'poloman.vn', 'tsla.store', 'coolmate.vn', '5s_official', 'rough.vn', 'patternvn', 'levents.vn', 'guzado.vn', 'thoitrangmando', 'tsimple_official', 'owen.fashion', 'thoitrangbiluxury', 'feaer_store', 'sukiyafashion.vn', '4menstores', 'haidang.fashion', 'thoitrangnam4u', 'thoitrangeverest', 'kojibavn']\n",
-      "['sp.btw2', 'poloman.vn', 'tsla.store', 'coolmate.vn', '5s_official', 'rough.vn', 'patternvn', 'levents.vn', 'guzado.vn', 'thoitrangmando', 'tsimple_official', 'owen.fashion', 'thoitrangbiluxury', 'feaer_store', 'sukiyafashion.vn', '4menstores', 'haidang.fashion', 'thoitrangnam4u', 'thoitrangeverest', 'kojibavn']\n",
-      "['sp.btw2', 'poloman.vn', 'tsla.store', 'coolmate.vn', '5s_official', 'rough.vn', 'patternvn', 'levents.vn', 'guzado.vn', 'thoitrangmando', 'tsimple_official', 'owen.fashion', 'thoitrangbiluxury', 'feaer_store', 'sukiyafashion.vn', '4menstores', 'haidang.fashion', 'thoitrangnam4u', 'thoitrangeverest', 'kojibavn']\n",
-      "['sp.btw2', 'poloman.vn', 'tsla.store', 'coolmate.vn', '5s_official', 'rough.vn', 'patternvn', 'levents.vn', 'guzado.vn', 'thoitrangmando', 'tsimple_official', 'owen.fashion', 'thoitrangbiluxury', 'feaer_store', 'sukiyafashion.vn', '4menstores', 'haidang.fashion', 'thoitrangnam4u', 'thoitrangeverest', 'kojibavn']\n",
-      "['sp.btw2', 'poloman.vn', 'tsla.store', 'coolmate.vn', '5s_official', 'rough.vn', 'patternvn', 'levents.vn', 'guzado.vn', 'thoitrangmando', 'tsimple_official', 'owen.fashion', 'thoitrangbiluxury', 'feaer_store', 'sukiyafashion.vn', '4menstores', 'haidang.fashion', 'thoitrangnam4u', 'thoitrangeverest', 'kojibavn']\n",
-      "['sp.btw2', 'poloman.vn', 'tsla.store', 'coolmate.vn', '5s_official', 'rough.vn', 'patternvn', 'levents.vn', 'guzado.vn', 'thoitrangmando', 'tsimple_official', 'owen.fashion', 'thoitrangbiluxury', 'feaer_store', 'sukiyafashion.vn', '4menstores', 'haidang.fashion', 'thoitrangnam4u', 'thoitrangeverest', 'kojibavn']\n",
-      "['sp.btw2', 'poloman.vn', 'tsla.store', 'coolmate.vn', '5s_official', 'rough.vn', 'patternvn', 'levents.vn', 'guzado.vn', 'thoitrangmando', 'tsimple_official', 'owen.fashion', 'thoitrangbiluxury', 'feaer_store', 'sukiyafashion.vn', '4menstores', 'haidang.fashion', 'thoitrangnam4u', 'thoitrangeverest', 'kojibavn']\n",
-      "['sp.btw2', 'poloman.vn', 'tsla.store', 'coolmate.vn', '5s_official', 'rough.vn', 'patternvn', 'levents.vn', 'guzado.vn', 'thoitrangmando', 'tsimple_official', 'owen.fashion', 'thoitrangbiluxury', 'feaer_store', 'sukiyafashion.vn', '4menstores', 'haidang.fashion', 'thoitrangnam4u', 'thoitrangeverest', 'kojibavn']\n",
-      "['sp.btw2', 'poloman.vn', 'tsla.store', 'coolmate.vn', '5s_official', 'rough.vn', 'patternvn', 'levents.vn', 'guzado.vn', 'thoitrangmando', 'tsimple_official', 'owen.fashion', 'thoitrangbiluxury', 'feaer_store', 'sukiyafashion.vn', '4menstores', 'haidang.fashion', 'thoitrangnam4u', 'thoitrangeverest', 'kojibavn']\n",
-      "['sp.btw2', 'poloman.vn', 'tsla.store', 'coolmate.vn', '5s_official', 'rough.vn', 'patternvn', 'levents.vn', 'guzado.vn', 'thoitrangmando', 'tsimple_official', 'owen.fashion', 'thoitrangbiluxury', 'feaer_store', 'sukiyafashion.vn', '4menstores', 'haidang.fashion', 'thoitrangnam4u', 'thoitrangeverest', 'kojibavn']\n",
-      "['sp.btw2', 'poloman.vn', 'tsla.store', 'coolmate.vn', '5s_official', 'rough.vn', 'patternvn', 'levents.vn', 'guzado.vn', 'thoitrangmando', 'tsimple_official', 'owen.fashion', 'thoitrangbiluxury', 'feaer_store', 'sukiyafashion.vn', '4menstores', 'haidang.fashion', 'thoitrangnam4u', 'thoitrangeverest', 'kojibavn']\n",
-      "['sp.btw2', 'poloman.vn', 'tsla.store', 'coolmate.vn', '5s_official', 'rough.vn', 'patternvn', 'levents.vn', 'guzado.vn', 'thoitrangmando', 'tsimple_official', 'owen.fashion', 'thoitrangbiluxury', 'feaer_store', 'sukiyafashion.vn', '4menstores', 'haidang.fashion', 'thoitrangnam4u', 'thoitrangeverest', 'kojibavn']\n",
-      "['sp.btw2', 'poloman.vn', 'tsla.store', 'coolmate.vn', '5s_official', 'rough.vn', 'patternvn', 'levents.vn', 'guzado.vn', 'thoitrangmando', 'tsimple_official', 'owen.fashion', 'thoitrangbiluxury', 'feaer_store', 'sukiyafashion.vn', '4menstores', 'haidang.fashion', 'thoitrangnam4u', 'thoitrangeverest', 'kojibavn']\n",
-      "['sp.btw2', 'poloman.vn', 'tsla.store', 'coolmate.vn', '5s_official', 'rough.vn', 'patternvn', 'levents.vn', 'guzado.vn', 'thoitrangmando', 'tsimple_official', 'owen.fashion', 'thoitrangbiluxury', 'feaer_store', 'sukiyafashion.vn', '4menstores', 'haidang.fashion', 'thoitrangnam4u', 'thoitrangeverest', 'kojibavn']\n",
-      "['sp.btw2', 'poloman.vn', 'tsla.store', 'coolmate.vn', '5s_official', 'rough.vn', 'patternvn', 'levents.vn', 'guzado.vn', 'thoitrangmando', 'tsimple_official', 'owen.fashion', 'thoitrangbiluxury', 'feaer_store', 'sukiyafashion.vn', '4menstores', 'haidang.fashion', 'thoitrangnam4u', 'thoitrangeverest', 'kojibavn']\n",
-      "['sp.btw2', 'poloman.vn', 'tsla.store', 'coolmate.vn', '5s_official', 'rough.vn', 'patternvn', 'levents.vn', 'guzado.vn', 'thoitrangmando', 'tsimple_official', 'owen.fashion', 'thoitrangbiluxury', 'feaer_store', 'sukiyafashion.vn', '4menstores', 'haidang.fashion', 'thoitrangnam4u', 'thoitrangeverest', 'kojibavn']\n",
-      "['sp.btw2', 'poloman.vn', 'tsla.store', 'coolmate.vn', '5s_official', 'rough.vn', 'patternvn', 'levents.vn', 'guzado.vn', 'thoitrangmando', 'tsimple_official', 'owen.fashion', 'thoitrangbiluxury', 'feaer_store', 'sukiyafashion.vn', '4menstores', 'haidang.fashion', 'thoitrangnam4u', 'thoitrangeverest', 'kojibavn']\n",
-      "['sp.btw2', 'poloman.vn', 'tsla.store', 'coolmate.vn', '5s_official', 'rough.vn', 'patternvn', 'levents.vn', 'guzado.vn', 'thoitrangmando', 'tsimple_official', 'owen.fashion', 'thoitrangbiluxury', 'feaer_store', 'sukiyafashion.vn', '4menstores', 'haidang.fashion', 'thoitrangnam4u', 'thoitrangeverest', 'kojibavn']\n",
-      "['sp.btw2', 'poloman.vn', 'tsla.store', 'coolmate.vn', '5s_official', 'rough.vn', 'patternvn', 'levents.vn', 'guzado.vn', 'thoitrangmando', 'tsimple_official', 'owen.fashion', 'thoitrangbiluxury', 'feaer_store', 'sukiyafashion.vn', '4menstores', 'haidang.fashion', 'thoitrangnam4u', 'thoitrangeverest', 'kojibavn']\n",
-      "['sp.btw2', 'poloman.vn', 'tsla.store', 'coolmate.vn', '5s_official', 'rough.vn', 'patternvn', 'levents.vn', 'guzado.vn', 'thoitrangmando', 'tsimple_official', 'owen.fashion', 'thoitrangbiluxury', 'feaer_store', 'sukiyafashion.vn', '4menstores', 'haidang.fashion', 'thoitrangnam4u', 'thoitrangeverest', 'kojibavn']\n",
-      "['sp.btw2', 'poloman.vn', 'tsla.store', 'coolmate.vn', '5s_official', 'rough.vn', 'patternvn', 'levents.vn', 'guzado.vn', 'thoitrangmando', 'tsimple_official', 'owen.fashion', 'thoitrangbiluxury', 'feaer_store', 'sukiyafashion.vn', '4menstores', 'haidang.fashion', 'thoitrangnam4u', 'thoitrangeverest', 'kojibavn']\n",
       "['sp.btw2', 'poloman.vn', 'tsla.store', 'coolmate.vn', '5s_official', 'rough.vn', 'patternvn', 'levents.vn', 'guzado.vn', 'thoitrangmando', 'tsimple_official', 'owen.fashion', 'thoitrangbiluxury', 'feaer_store', 'sukiyafashion.vn', '4menstores', 'haidang.fashion', 'thoitrangnam4u', 'thoitrangeverest', 'kojibavn']['sp.btw2', 'poloman.vn', 'tsla.store', 'coolmate.vn', '5s_official', 'rough.vn', 'patternvn', 'levents.vn', 'guzado.vn', 'thoitrangmando', 'tsimple_official', 'owen.fashion', 'thoitrangbiluxury', 'feaer_store', 'sukiyafashion.vn', '4menstores', 'haidang.fashion', 'thoitrangnam4u', 'thoitrangeverest', 'kojibavn']\n",
+      "['sp.btw2', 'poloman.vn', 'tsla.store', 'coolmate.vn', '5s_official', 'rough.vn', 'patternvn', 'levents.vn', 'guzado.vn', 'thoitrangmando', 'tsimple_official', 'owen.fashion', 'thoitrangbiluxury', 'feaer_store', 'sukiyafashion.vn', '4menstores', 'haidang.fashion', 'thoitrangnam4u', 'thoitrangeverest', 'kojibavn']\n",
+      "['sp.btw2', 'poloman.vn', 'tsla.store', 'coolmate.vn', '5s_official', 'rough.vn', 'patternvn', 'levents.vn', 'guzado.vn', 'thoitrangmando', 'tsimple_official', 'owen.fashion', 'thoitrangbiluxury', 'feaer_store', 'sukiyafashion.vn', '4menstores', 'haidang.fashion', 'thoitrangnam4u', 'thoitrangeverest', 'kojibavn']\n",
       "['sp.btw2', 'poloman.vn', 'tsla.store', 'coolmate.vn', '5s_official', 'rough.vn', 'patternvn', 'levents.vn', 'guzado.vn', 'thoitrangmando', 'tsimple_official', 'owen.fashion', 'thoitrangbiluxury', 'feaer_store', 'sukiyafashion.vn', '4menstores', 'haidang.fashion', 'thoitrangnam4u', 'thoitrangeverest', 'kojibavn']\n",
       "\n",
       "['sp.btw2', 'poloman.vn', 'tsla.store', 'coolmate.vn', '5s_official', 'rough.vn', 'patternvn', 'levents.vn', 'guzado.vn', 'thoitrangmando', 'tsimple_official', 'owen.fashion', 'thoitrangbiluxury', 'feaer_store', 'sukiyafashion.vn', '4menstores', 'haidang.fashion', 'thoitrangnam4u', 'thoitrangeverest', 'kojibavn']\n",
@@ -48,6 +24,8 @@
       "['sp.btw2', 'poloman.vn', 'tsla.store', 'coolmate.vn', '5s_official', 'rough.vn', 'patternvn', 'levents.vn', 'guzado.vn', 'thoitrangmando', 'tsimple_official', 'owen.fashion', 'thoitrangbiluxury', 'feaer_store', 'sukiyafashion.vn', '4menstores', 'haidang.fashion', 'thoitrangnam4u', 'thoitrangeverest', 'kojibavn']\n",
       "['sp.btw2', 'poloman.vn', 'tsla.store', 'coolmate.vn', '5s_official', 'rough.vn', 'patternvn', 'levents.vn', 'guzado.vn', 'thoitrangmando', 'tsimple_official', 'owen.fashion', 'thoitrangbiluxury', 'feaer_store', 'sukiyafashion.vn', '4menstores', 'haidang.fashion', 'thoitrangnam4u', 'thoitrangeverest', 'kojibavn']\n",
       "['sp.btw2', 'poloman.vn', 'tsla.store', 'coolmate.vn', '5s_official', 'rough.vn', 'patternvn', 'levents.vn', 'guzado.vn', 'thoitrangmando', 'tsimple_official', 'owen.fashion', 'thoitrangbiluxury', 'feaer_store', 'sukiyafashion.vn', '4menstores', 'haidang.fashion', 'thoitrangnam4u', 'thoitrangeverest', 'kojibavn']\n",
+      "['sp.btw2', 'poloman.vn', 'tsla.store', 'coolmate.vn', '5s_official', 'rough.vn', 'patternvn', 'levents.vn', 'guzado.vn', 'thoitrangmando', 'tsimple_official', 'owen.fashion', 'thoitrangbiluxury', 'feaer_store', 'sukiyafashion.vn', '4menstores', 'haidang.fashion', 'thoitrangnam4u', 'thoitrangeverest', 'kojibavn']['sp.btw2', 'poloman.vn', 'tsla.store', 'coolmate.vn', '5s_official', 'rough.vn', 'patternvn', 'levents.vn', 'guzado.vn', 'thoitrangmando', 'tsimple_official', 'owen.fashion', 'thoitrangbiluxury', 'feaer_store', 'sukiyafashion.vn', '4menstores', 'haidang.fashion', 'thoitrangnam4u', 'thoitrangeverest', 'kojibavn']\n",
+      "\n",
       "['sp.btw2', 'poloman.vn', 'tsla.store', 'coolmate.vn', '5s_official', 'rough.vn', 'patternvn', 'levents.vn', 'guzado.vn', 'thoitrangmando', 'tsimple_official', 'owen.fashion', 'thoitrangbiluxury', 'feaer_store', 'sukiyafashion.vn', '4menstores', 'haidang.fashion', 'thoitrangnam4u', 'thoitrangeverest', 'kojibavn']\n",
       "['sp.btw2', 'poloman.vn', 'tsla.store', 'coolmate.vn', '5s_official', 'rough.vn', 'patternvn', 'levents.vn', 'guzado.vn', 'thoitrangmando', 'tsimple_official', 'owen.fashion', 'thoitrangbiluxury', 'feaer_store', 'sukiyafashion.vn', '4menstores', 'haidang.fashion', 'thoitrangnam4u', 'thoitrangeverest', 'kojibavn']\n",
       "['sp.btw2', 'poloman.vn', 'tsla.store', 'coolmate.vn', '5s_official', 'rough.vn', 'patternvn', 'levents.vn', 'guzado.vn', 'thoitrangmando', 'tsimple_official', 'owen.fashion', 'thoitrangbiluxury', 'feaer_store', 'sukiyafashion.vn', '4menstores', 'haidang.fashion', 'thoitrangnam4u', 'thoitrangeverest', 'kojibavn']\n"
@@ -102,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,16 +94,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'137.74.65.101:80'"
+       "'200.105.215.22:33630'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,6 +115,15 @@
     "proxylist = [proxy for sublist in proxies for proxy in sublist]\n",
     "proxy = random.choice(proxylist)\n",
     "proxy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_1.to_csv('proxylist_1.csv',index=False,header=True)"
    ]
   },
   {
