add processing lazada

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,28 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from pymongo.mongo_client import MongoClient\n",
-    "from pymongo.server_api import ServerApi"
+    "from pymongo.server_api import ServerApi\n",
+    "import math"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Xử lý shopee"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pinged your deployment. You successfully connected to MongoDB!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "password = \"qthls2023\"\n",
     "uri = \"mongodb+srv://shopee_database_1:{}@cluster0.1wsiirv.mongodb.net/?retryWrites=true&w=majority\".format(password)\n",
@@ -36,8 +36,8 @@
     "except Exception as e:\n",
     "    print(e)\n",
     "    \n",
-    "db = client_server['Task2_Database']\n",
-    "collection = db['Shopee_Full_Preprocessing_Data']\n",
+    "db = client_server['lazada']\n",
+    "collection = db['product']\n",
     "\n",
     "cursor = collection.find()\n",
     "data_list = []\n",
@@ -51,48 +51,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['itemid', 'shopid', 'name', 'stock', 'sold', 'historical_sold',\n",
-       "       'liked_count', 'cmt_count', 'item_status', 'price', 'price_min',\n",
-       "       'price_max', 'price_min_before_discount', 'price_max_before_discount',\n",
-       "       'price_before_discount', 'item_rating', 'show_free_shipping',\n",
-       "       'shop_location', 'is_on_flash_sale', 'shop_name', 'shop_rating',\n",
-       "       'global_sold_count', 'flash_sale_stock', 'crawl_time', 'crawl_id',\n",
-       "       'color', 'size', 'rating_star', 'rating_count', 'rcount_with_image',\n",
-       "       'rcount_with_context'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Xóa cột dư trong shopee data\n",
     "drop_col_list = [ 'price_min', 'price_min_before_discount','item_rating']\n",
     "df.drop(drop_col_list,axis=1,inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Lấy thời gian crawl đầu tiên trong ngày\n",
     "df['crawl_time'] = pd.to_datetime(df['crawl_time'])\n",
     "filtered_df = df[(df['crawl_time'].dt.hour >= 10) & (df['crawl_time'].dt.hour <=19)]"
    ]
@@ -103,7 +77,99 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Ghi lại vào file csv\n",
     "filtered_df.to_csv(\"shopee.csv\",index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Lazada"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pinged your deployment. You successfully connected to MongoDB!\n"
+     ]
+    }
+   ],
+   "source": [
+    "uri = \"mongodb+srv://hoaihcb1:hoaiphan@atlascluster.xmdmtus.mongodb.net/?retryWrites=true&w=majority\"\n",
+    "client_server = MongoClient(uri, server_api=ServerApi('1'))\n",
+    "\n",
+    "# Send a ping to confirm a successful connection\n",
+    "try:\n",
+    "    client_server.admin.command('ping')\n",
+    "    print(\"Pinged your deployment. You successfully connected to MongoDB!\")\n",
+    "except Exception as e:\n",
+    "    print(e)\n",
+    "    \n",
+    "db = client_server['lazada']\n",
+    "collection = db['product']\n",
+    "\n",
+    "cursor = collection.find()\n",
+    "data_list = []\n",
+    "for document in cursor: \n",
+    "    del document['_id']\n",
+    "    data_list.append(document)\n",
+    "\n",
+    "\n",
+    "df = pd.DataFrame(data_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "item_date_duplicate_idx = df.groupby(['date', 'itemId'])['nid'].count()\n",
+    "item_date_duplicate = item_date_duplicate_idx[item_date_duplicate_idx > 1].index\n",
+    "idx_min_review = []\n",
+    "for i in item_date_duplicate:\n",
+    "    duplicate_df = df[(df['date'] == i[0]) & (df['itemId'] == i[1])]\n",
+    "    idx_max = int(duplicate_df['review'].idxmax())\n",
+    "    l = duplicate_df.index.to_list()\n",
+    "    l.remove(idx_max)\n",
+    "    idx_min_review+=l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Số dòng trùng lặp là: 0\n",
+      "Số item trùng lặp trong ngày là: 1531\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Số dòng trùng lặp là:\", df.duplicated().sum())\n",
+    "df.drop_duplicates(inplace= True) ## Xóa trùng lặp\n",
+    "print(\"Số item trùng lặp trong ngày là:\", len(idx_min_review))\n",
+    "df.drop(idx_min_review, inplace= True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('lazada.csv')"
    ]
   }
  ],
